manifests/dev/booklore/Deployment-booklore.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/instance: booklore
    app.kubernetes.io/name: booklore
    app.kubernetes.io/version: 0.8.7
  name: booklore
  namespace: booklore
spec:
  selector:
    matchLabels:
      app.kubernetes.io/instance: booklore
      app.kubernetes.io/name: booklore
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: booklore
        app.kubernetes.io/name: booklore
    spec:
      automountServiceAccountToken: true
      containers:
        - env:
            - name: USER_ID
              value: "0"
            - name: GROUP_ID
              value: "0"
            - name: TZ
              value: Etc/UTC
            - name: DATABASE_URL
              value: jdbc:mariadb://mariadb.mariadb:3306/booklore
            - name: DATABASE_USERNAME
              value: booklore
            - name: DATABASE_PASSWORD
              valueFrom:
                secretKeyRef:
                  key: password
                  name: booklore-database-password
            - name: BOOKLORE_PORT
              value: "6060"
            - name: SWAGGER_ENABLED
              value: "false"
          image: booklore/booklore:latest
          imagePullPolicy: IfNotPresent
          livenessProbe:
            failureThreshold: 3
            initialDelaySeconds: 0
            periodSeconds: 10
            tcpSocket:
              port: 5000
          name: booklore
          ports:
            - containerPort: 6060
              name: http
              protocol: TCP
          volumeMounts:
            - mountPath: /bookdrop
              name: bookdrop
            - mountPath: /books
              name: books
            - mountPath: /app/data
              name: data
      serviceAccountName: default
      volumes:
        - name: bookdrop
          persistentVolumeClaim:
            claimName: booklore-booklore-bookdrop
        - name: books
          persistentVolumeClaim:
            claimName: booklore-booklore-books
        - name: data
          persistentVolumeClaim:
            claimName: booklore-booklore-data
