manifests/dev/booklore/Service-booklore.yaml
apiVersion: v1
kind: Service
metadata:
  name: booklore
  namespace: booklore
spec:
  ports:
    - name: http
      port: 6060
      protocol: TCP
      targetPort: http
  selector:
    app.kubernetes.io/instance: booklore
    app.kubernetes.io/name: booklore
  type: ClusterIP
