manifests/dev/booklore/Service-mariadb.yaml
apiVersion: v1
kind: Service
metadata:
  name: mariadb
  namespace: booklore
spec:
  ports:
    - name: http
      port: 3306
      protocol: TCP
      targetPort: http
  selector:
    app.kubernetes.io/instance: booklore
    app.kubernetes.io/name: booklore
  type: ClusterIP
