manifests/dev/booklore/Ingress-booklore-local.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
  name: booklore-local
  namespace: booklore
spec:
  ingressClassName: traefik
  rules:
    - host: booklore.home.kronkltd.net
      http:
        paths:
          - backend:
              service:
                name: booklore
                port:
                  name: http
            path: /
            pathType: ImplementationSpecific
  tls:
    - hosts:
        - booklore.home.kronkltd.net
      secretName: booklore-local-tls
